--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -30,7 +30,7 @@ jobs:
 
     - name: Run tests with coverage
       run: |
-        pytest --cov=src tests/
+        PYTHONPATH=$PYTHONPATH:$(pwd) pytest --cov=src tests/
         
     - name: Upload coverage reports
       uses: codecov/codecov-action@v3
